# currency_converter

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  alembic.ini  example_currency_rates.json  pyproject.toml
src/: config.py  currency.py  currency_converter.py  main.py
src/connectors/database/: __init__.py  base_connector.py  json.py  session.py  sqlite.py
src/connectors/local/: file_reader.py
src/data_source/: __init__.py  local.py  nbp.py
src/migrations/: env.py
src/migrations/versions/: 36d2110c8538_init.py
src/models/: converted.py
tests/: currency_converter_test.py  main_test.py
tests/connectors/database/: json_test.py  sqlite_test.py
tests/connectors/local/: file_reader_test.py
tests/data_source/: local_test.py  nbp_test.py
tests/test_data/: test_json_unhappy.json
